--- a/app/templates/bpmn-files/index.hbs
+++ b/app/templates/bpmn-files/index.hbs
@@ -68,6 +68,7 @@
         <AuLink @route="help" @skin="secondary" @icon="circle-info">Over BPMN
           bestanden</AuLink>
       </:subtitle>
+      <:action></:action>
     </PageHeader>
 
     <AuDataTable
