Introduce custom icon component

--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -151,7 +151,7 @@
       <p>Laat ons weten of dit proces bruikbaar was voor jouw organisatie.</p>
     </c.content>
     <c.footer>
-      <AuButton @skin="secondary"><AuIcon @icon="like" />Ja, dit is een goed
+      <AuButton @skin="secondary"><CustomIcon @icon="like" />Ja, dit is een goed
         proces</AuButton>
     </c.footer>
   </AuCard>
