--- a/app/templates/bpmn-uploads/bpmn-file/index.hbs
+++ b/app/templates/bpmn-uploads/bpmn-file/index.hbs
@@ -6,7 +6,7 @@
     <AuButtonGroup>
       <a
         class="au-c-button au-c-button--secondary"
-        href="{{bpmn-download-url @model.metadata.id}}"
+        href="{{bpmn-download-url @model.metadata.id @model.metadata.name}}"
         download="{{@model.metadata.name}}"
         target="_blank"
         rel="noopener noreferrer"
@@ -20,130 +20,139 @@
 
 <AuBodyContainer class="au-o-box au-o-flow" @scroll={{true}}>
   {{#if this.edit}}
-  <DataCard>
-    <:header></:header>
-    <:title>
-      Metadata
-    </:title>
-    <:card as |Card|>
-      <Card.Columns>
-        <:left as |Item|>
-          <Item>
-            <:label>Bestandsnaam</:label>
-            <:content>
-              <AuInput @value={{@model.metadata.name}} @width="block" />
-            </:content>
-          </Item>
-          <Item>
-            <:label>Beschrijving</:label>
-            <:content>
-              <AuTextarea rows="7" @value="" @width="block" />
-            </:content>
-          </Item>
-        </:left>
-        <:right as |Item|>
-          <Item>
-            <:label>Aangemaakt op</:label>
-            <:content>
-              {{date-format @model.metadata.created}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Laatst aangepast op</:label>
-            <:content>
-              {{date-format @model.metadata.modified}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Extensie</:label>
-            <:content>
-              {{@model.metadata.extension}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Formaat</:label>
-            <:content>
-              {{@model.metadata.format}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Grootte</:label>
-            <:content>
-              {{file-size-format @model.metadata.size}}
-            </:content>
-          </Item>
-        </:right>
-      </Card.Columns>
-    </:card>
-    <:action>
-      <div class="au-u-flex au-u-flex--spaced-small au-u-flex--end">
-        <AuButton @skin="secondary" {{on "click" this.toggleEdit}}>Annuleer</AuButton>
-        <AuButton @skin="primary" {{on "click" this.toggleEdit}}>Bewaar</AuButton>
-      </div>
-    </:action>
-  </DataCard>
+    <DataCard>
+      <:header></:header>
+      <:title>
+        Metadata
+      </:title>
+      <:card as |Card|>
+        <Card.Columns>
+          <:left as |Item|>
+            <Item>
+              <:label>Bestandsnaam</:label>
+              <:content>
+                <AuInput @value={{@model.metadata.name}} @width="block" />
+              </:content>
+            </Item>
+            <Item>
+              <:label>Beschrijving</:label>
+              <:content>
+                <AuTextarea rows="7" @value="" @width="block" />
+              </:content>
+            </Item>
+          </:left>
+          <:right as |Item|>
+            <Item>
+              <:label>Aangemaakt op</:label>
+              <:content>
+                {{date-format @model.metadata.created}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Laatst aangepast op</:label>
+              <:content>
+                {{date-format @model.metadata.modified}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Extensie</:label>
+              <:content>
+                {{@model.metadata.extension}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Formaat</:label>
+              <:content>
+                {{@model.metadata.format}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Grootte</:label>
+              <:content>
+                {{file-size-format @model.metadata.size}}
+              </:content>
+            </Item>
+          </:right>
+        </Card.Columns>
+      </:card>
+      <:action>
+        <div class="au-u-flex au-u-flex--spaced-small au-u-flex--end">
+          <AuButton
+            @skin="secondary"
+            {{on "click" this.toggleEdit}}
+          >Annuleer</AuButton>
+          <AuButton
+            @skin="primary"
+            {{on "click" this.toggleEdit}}
+          >Bewaar</AuButton>
+        </div>
+      </:action>
+    </DataCard>
   {{else}}
-  <DataCard>
-    <:header>
-      <AuButton @skin="naked" @icon="pencil" {{on "click" this.toggleEdit}}>Wijzig</AuButton>
-    </:header>
-    <:title>
-      Metadata
-    </:title>
-    <:card as |Card|>
-      <Card.Columns>
-        <:left as |Item|>
-          <Item>
-            <:label>Bestandsnaam</:label>
-            <:content>
-              {{@model.metadata.name}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Beschrijving</:label>
-            <:content>
-              ...
-            </:content>
-          </Item>
-          
-        </:left>
-        <:right as |Item|>
-          <Item>
-            <:label>Aangemaakt op</:label>
-            <:content>
-              {{date-format @model.metadata.created}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Laatst aangepast op</:label>
-            <:content>
-              {{date-format @model.metadata.modified}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Extensie</:label>
-            <:content>
-              {{@model.metadata.extension}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Formaat</:label>
-            <:content>
-              {{@model.metadata.format}}
-            </:content>
-          </Item>
-          <Item>
-            <:label>Grootte</:label>
-            <:content>
-              {{file-size-format @model.metadata.size}}
-            </:content>
-          </Item>
-        </:right>
-      </Card.Columns>
-    </:card>
-  </DataCard>
-  {{/if}}
+    <DataCard>
+      <:header>
+        <AuButton
+          @skin="naked"
+          @icon="pencil"
+          {{on "click" this.toggleEdit}}
+        >Wijzig</AuButton>
+      </:header>
+      <:title>
+        Metadata
+      </:title>
+      <:card as |Card|>
+        <Card.Columns>
+          <:left as |Item|>
+            <Item>
+              <:label>Bestandsnaam</:label>
+              <:content>
+                {{@model.metadata.name}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Beschrijving</:label>
+              <:content>
+                ...
+              </:content>
+            </Item>
 
+          </:left>
+          <:right as |Item|>
+            <Item>
+              <:label>Aangemaakt op</:label>
+              <:content>
+                {{date-format @model.metadata.created}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Laatst aangepast op</:label>
+              <:content>
+                {{date-format @model.metadata.modified}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Extensie</:label>
+              <:content>
+                {{@model.metadata.extension}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Formaat</:label>
+              <:content>
+                {{@model.metadata.format}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Grootte</:label>
+              <:content>
+                {{file-size-format @model.metadata.size}}
+              </:content>
+            </Item>
+          </:right>
+        </Card.Columns>
+      </:card>
+    </DataCard>
+  {{/if}}
 
   <div class="au-o-grid au-o-grid--tiny au-u-margin-top">
     <div class="au-o-grid__item">
@@ -153,8 +162,8 @@
         class="au-u-margin-bottom-none"
       >Diagram</AuHeading>
       <p class="au-u-margin-top-none">
-        <AuHelpText @skin="secondary">Klik en hou vast om diagram te
-        bewegen. Gebruik ctrl en scrollwiel om in en uit te zoomen.</AuHelpText>
+        <AuHelpText @skin="secondary">Klik en hou vast om diagram te bewegen.
+          Gebruik ctrl en scrollwiel om in en uit te zoomen.</AuHelpText>
       </p>
       <BpmnViewer @bpmnXml={{@model.diagram}} />
     </div>
