Get rid of au input deprecation errors

--- a/app/templates/bpmn-uploads/bpmn-file/index.hbs
+++ b/app/templates/bpmn-uploads/bpmn-file/index.hbs
@@ -31,13 +31,13 @@
             <Item>
               <:label>Bestandsnaam</:label>
               <:content>
-                <AuInput @value={{@model.metadata.name}} @width="block" />
+                <AuInput value={{@model.metadata.name}} @width="block" />
               </:content>
             </Item>
             <Item>
               <:label>Beschrijving</:label>
               <:content>
-                <AuTextarea rows="7" @value="" @width="block" />
+                <AuTextarea rows="7" value="" @width="block" />
               </:content>
             </Item>
           </:left>
