--- a/app/templates/bpmn-files/index.hbs
+++ b/app/templates/bpmn-files/index.hbs
@@ -69,6 +69,7 @@
           <AuDataTableThSortable @field="name" @label="Beschrijving" />
           <AuDataTableThSortable
             @field="modified"
+            @currentSorting={{this.sort}}
             @label="Laatst aangepast op"
           />
           <AuDataTableThSortable @field="name" @label="Bestuur" />
