Bring back old session behaviour

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -49,31 +49,33 @@
                 </c.footer>
               </AuCard>
             </div>
-            <div class="au-o-grid__item au-u-1-2@medium">
-              <AuCard @flex={{true}} as |c|>
-                <c.header
-                  @badgeSkin="brand"
-                  @badgeIcon="upload"
-                  @badgeSize="small"
-                >
-                  <AuHeading @level="2" @skin="4">
-                    Deel jouw processen
-                  </AuHeading>
-                </c.header>
-                <c.content>
-                  <AuList @divider={{true}} as |Item|>
-                    <Item>Upload processen</Item>
-                    <Item>Beheer gedeelde processen</Item>
-                  </AuList>
-                </c.content>
-                <c.footer>
-                  <div class="au-u-h-functional au-o-flow au-o-flow--small">
-                    <AuLink @skin="button" @route="bpmn-uploads">Deel jouw
-                      processen</AuLink>
-                  </div>
-                </c.footer>
-              </AuCard>
-            </div>
+            {{#if this.currentSession.canEdit}}
+              <div class="au-o-grid__item au-u-1-2@medium">
+                <AuCard @flex={{true}} as |c|>
+                  <c.header
+                    @badgeSkin="brand"
+                    @badgeIcon="upload"
+                    @badgeSize="small"
+                  >
+                    <AuHeading @level="2" @skin="4">
+                      Deel jouw processen
+                    </AuHeading>
+                  </c.header>
+                  <c.content>
+                    <AuList @divider={{true}} as |Item|>
+                      <Item>Upload processen</Item>
+                      <Item>Beheer gedeelde processen</Item>
+                    </AuList>
+                  </c.content>
+                  <c.footer>
+                    <div class="au-u-h-functional au-o-flow au-o-flow--small">
+                      <AuLink @skin="button" @route="bpmn-uploads">Deel jouw
+                        processen</AuLink>
+                    </div>
+                  </c.footer>
+                </AuCard>
+              </div>
+            {{/if}}
           </div>
           <p class="au-u-text-center">
             <AuLink @route="help">Meer informatie over processen en BPMN
