--- a/app/templates/bpmn-uploads/index.hbs
+++ b/app/templates/bpmn-uploads/index.hbs
@@ -122,12 +122,13 @@
 >
   <:title>Voeg BPMN-bestand toe</:title>
   <:body>
-    <AuFileUpload
+    <CustomFileUpload
       @accept=".bpmn,.xml"
       @endPoint={{this.postEndpoint}}
       @title="Bestand selecteren"
       @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
       @onFinishUpload={{this.fileUploaded}}
+      @onFileId={{this.extractBpmn}}
     />
   </:body>
   <:footer>
