--- a/app/templates/bpmn-files.hbs
+++ b/app/templates/bpmn-files.hbs
@@ -1,5 +1,5 @@
-{{page-title "BPMN-bestanden"}}
-{{breadcrumb "BPMN-bestanden" route="bpmn-files"}}
+{{page-title "Processen"}}
+{{breadcrumb "Processen" route="bpmn-files"}}
 
 <div class="au-c-body-container au-c-body-container--scroll">
   <NavigationBar />
