--- a/app/templates/bpmn-files/index.hbs
+++ b/app/templates/bpmn-files/index.hbs
@@ -1,13 +1,25 @@
 <SidebarContainer>
   <:sidebar>
     <div class="au-c-sidebar">
-      <div class="au-c-sidebar__content au-o-box">
+      <div class="au-c-sidebar__content">
+        <ul class="au-c-list-navigation">
+          <li class="au-c-list-navigation__item">
+            <AuNavigationLink @route="bpmn-files.index">
+              Alle processen
+            </AuNavigationLink>
+          </li>
+          <li class="au-c-list-navigation__item">
+            <AuNavigationLink @route="bpmn-files.favorites">
+              Favorieten
+            </AuNavigationLink>
+          </li>
+        </ul>
         <form
           {{on "reset" this.resetFilters}}
-          class="au-o-grid au-o-grid--small"
+          class="au-o-box au-o-box--small au-o-flow au-o-flow--small"
         >
-          <div class="au-o-grid__item au-u-1-2@small au-u-1-1@medium">
-            <AuLabel for="filter-name">Naam</AuLabel>
+          <div>
+            <AuLabel for="filter-name">Zoek op naam of beschrijving</AuLabel>
             <BpmnFileSelectByName
               @id="filter-name"
               @selected={{this.name}}
@@ -15,9 +27,13 @@
               class="grow"
             />
           </div>
-          <div class="au-o-grid__item">
-            <AuButton @skin="link" type="reset">
-              <AuIcon @icon="cross" @alignment="left" />
+          <div>
+            <AuButton
+              @icon="undo"
+              @skin="link"
+              type="reset"
+              class="au-u-padding-none"
+            >
               Herstel alle filters
             </AuButton>
           </div>
@@ -26,34 +42,13 @@
     </div>
   </:sidebar>
   <:content>
-    {{#if this.newFileId}}
-      <AuAlert
-        @title="Gelukt!"
-        @skin="success"
-        @icon="check"
-        @size="small"
-        @closable="true"
-        @onClose={{this.closeAlert}}
-        class="au-u-margin au-u-margin-bottom-none"
-      >
-        <p>
-          <LinkTo
-            class="au-c-link"
-            @model={{this.newFileId}}
-            @route="bpmn-files.bpmn-file"
-          >Raadpleeg nieuw BPMN-bestand
-          </LinkTo></p>
-      </AuAlert>
-    {{/if}}
-
-    <PageHeader class="au-o-box">
-      <:title>BPMN-bestanden</:title>
-      <:subtitle>BPMN-bestanden beschrijven processen</:subtitle>
-      <:action>
-        {{#if this.currentSession.canEdit}}
-          <AuButton {{on "click" this.openFileModal}}>Voeg toe</AuButton>
-        {{/if}}
-      </:action>
+    <PageHeader>
+      <:title>Processen</:title>
+      <:subtitle>
+        <AuLink @route="help" @skin="secondary" @icon="circle-info">Over BPMN
+          bestanden</AuLink>
+      </:subtitle>
+      <:action></:action>
     </PageHeader>
 
     <AuDataTable
@@ -65,26 +60,19 @@
     >
       <t.content class="au-c-data-table__table--small" as |c|>
         <c.header>
+          <th></th>
           <AuDataTableThSortable
             @field="name"
             @currentSorting={{this.sort}}
             @label="Naam"
           />
+          <AuDataTableThSortable @field="name" @label="Beschrijving" />
           <AuDataTableThSortable
-            @field="extension"
+            @field="modified"
             @currentSorting={{this.sort}}
-            @label="Extensie"
+            @label="Laatst aangepast op"
           />
-          <AuDataTableThSortable
-            @field="format"
-            @currentSorting={{this.sort}}
-            @label="Formaat"
-          />
-          <AuDataTableThSortable
-            @field="size"
-            @currentSorting={{this.sort}}
-            @label="Grootte"
-          />
+          <AuDataTableThSortable @field="name" @label="Bestuur" />
         </c.header>
         {{#if this.hasErrored}}
           <TableMessage::Error />
@@ -96,6 +84,7 @@
           </TableMessage>
         {{else}}
           <c.body as |file|>
+            <td class="c-favorite-cell"><Favorite @active={{false}} /></td>
             <td>
               <LinkTo
                 class="au-c-link"
@@ -105,37 +94,12 @@
                 {{file.name}}
               </LinkTo>
             </td>
-            <td>{{file.extension}}</td>
-            <td>{{file.format}}</td>
-            <td>{{file-size-format file.size}}</td>
+            <td>...</td>
+            <td>{{date-format file.modified}}</td>
+            <td>Demo bestuur</td>
           </c.body>
         {{/if}}
       </t.content>
     </AuDataTable>
   </:content>
 </SidebarContainer>
-
-<AuModal
-  @modalOpen={{this.fileModalOpened}}
-  @closeModal={{this.closeFileModal}}
->
-  <:title>Voeg BPMN-bestand toe</:title>
-  <:body>
-    <CustomFileUpload
-      @accept=".bpmn,.xml"
-      @endPoint={{this.postEndpoint}}
-      @title="Bestand selecteren"
-      @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
-      @onFinishUpload={{this.fileUploaded}}
-      @onFileId={{this.extractBpmn}}
-    />
-  </:body>
-  <:footer>
-    <AuButtonGroup class="au-u-flex--end">
-      <AuButton
-        @skin="naked"
-        {{on "click" this.closeFileModal}}
-      >Annuleer</AuButton>
-    </AuButtonGroup>
-  </:footer>
-</AuModal>
