--- a/app/components/page-header.hbs
+++ b/app/components/page-header.hbs
@@ -1,17 +1,39 @@
 <header ...attributes>
   {{#if (has-block "action")}}
-    <AuToolbar as |Group|>
+    <AuToolbar @border="bottom" @size="medium" @nowrap={{true}} as |Group|>
       <Group>
-        <AuHeading>
-          {{yield to="title"}}
-        </AuHeading>
+        <div>
+          {{#each (breadcrumbs) as |breadcrumb|}}
+            <p class="au-u-h-functional">
+              {{#if (not (is-last breadcrumb (breadcrumbs)))}}
+                <AuLink
+                  @icon="arrow-left"
+                  @skin="secondary"
+                  @route={{breadcrumb.data.route}}
+                  @model={{breadcrumb.data.model}}
+                  @models={{breadcrumb.data.models}}
+                >
+                  {{breadcrumb.title}}
+                </AuLink>
+              {{/if}}
+            </p>
+          {{/each}}
+          <AuHeading>
+            {{yield to="title"}}
+          </AuHeading>
+          {{#if (has-block "subtitle")}}
+            <AuHeading @level="3" @skin="6" class="au-u-margin-top-tiny">
+              {{yield to="subtitle"}}
+            </AuHeading>
+          {{/if}}
+        </div>
       </Group>
-      <Group>
+      <Group class="au-c-toolbar__action">
         {{yield to="action"}}
       </Group>
     </AuToolbar>
   {{else if (has-block "alert")}}
-    <AuToolbar as |Group|>
+    <AuToolbar @size="large" as |Group|>
       <Group>
         <AuHeading class="au-u-margin-right">
           {{yield to="title"}}
@@ -24,11 +46,6 @@
   {{else}}
     <AuHeading>
       {{yield to="title"}}
-    </AuHeading>
-  {{/if}}
-  {{#if (has-block "subtitle")}}
-    <AuHeading @level="2" @skin="3" class="au-u-margin-top-tiny">
-      {{yield to="subtitle"}}
     </AuHeading>
   {{/if}}
 
