--- a/app/styles/components/_sidebar-container.scss
+++ b/app/styles/components/_sidebar-container.scss
@@ -8,17 +8,22 @@ Tracking issue: https://github.com/appuniversum/ember-appuniversum/issues/86 */
 .au-c-sidebar-container {
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
   overflow: hidden;
+
+  @include mq(medium) {
+    height: 100%;
+  }
 }
 
 .au-c-sidebar-container__sidebar {
   flex-basis: 100%;
+  padding: $au-unit-small;
 
   @include mq(medium) {
     height: 100%;
     flex-basis: 25rem;
     flex-shrink: 0;
+    padding-right: 0;
   }
 }
 
@@ -38,4 +43,23 @@ Tracking issue: https://github.com/appuniversum/ember-appuniversum/issues/86 */
     flex-basis: 0;
     flex-grow: 1;
   }
+}
+
+.au-c-sidebar {
+  border: 1px solid var(--au-gray-200);
+  border-radius: $au-radius;
+}
+
+.au-c-list-navigation {
+  border-bottom: 1px solid var(--au-gray-200);
+}
+
+.au-c-list-navigation__item {
+  & + & {
+    border-top: 1px solid var(--au-gray-200);
+  }
+}
+
+.au-c-list-navigation__link {
+  padding: $au-unit-small;
 }
