Hide button leading to shared processes to unauthorized users

--- a/app/components/navigation-bar.hbs
+++ b/app/components/navigation-bar.hbs
@@ -12,11 +12,12 @@
         </AuLink>
       </Tab>
     </AuTabs>
-
   </Group>
-  <Group>
-    <AuLink @route="bpmn-uploads" @skin="button-secondary">
-      Gedeelde processen
-    </AuLink>
-  </Group>
+  {{#if this.currentSession.canEdit}}
+    <Group>
+      <AuLink @route="bpmn-uploads" @skin="button-secondary">
+        Gedeelde processen
+      </AuLink>
+    </Group>
+  {{/if}}
 </AuToolbar>
