Add description attribute to file model

--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -37,7 +37,7 @@
           <Item>
             <:label>Beschrijving</:label>
             <:content>
-              ...
+              {{or @model.metadata.description "/"}}
             </:content>
           </Item>
 
