--- a/app/templates/bpmn-uploads/bpmn-file/index.hbs
+++ b/app/templates/bpmn-uploads/bpmn-file/index.hbs
@@ -112,7 +112,7 @@
             <Item>
               <:label>Beschrijving</:label>
               <:content>
-                ...
+                {{or @model.metadata.description "/"}}
               </:content>
             </Item>
 
