--- a/app/templates/bpmn-files/favorites.hbs
+++ b/app/templates/bpmn-files/favorites.hbs
@@ -94,7 +94,7 @@
                 {{file.name}}
               </LinkTo>
             </td>
-            <td>...</td>
+            <td>{{or @model.metadata.description "/"}}</td>
             <td>{{date-format file.modified}}</td>
             <td>Demo bestuur</td>
           </c.body>
