--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -46,13 +46,13 @@
           <Item>
             <:label>Aangemaakt op</:label>
             <:content>
-              {{date-format @model.metadata.created}}
+              {{date-format @model.metadata.created true}}
             </:content>
           </Item>
           <Item>
             <:label>Laatst aangepast op</:label>
             <:content>
-              {{date-format @model.metadata.modified}}
+              {{date-format @model.metadata.modified true}}
             </:content>
           </Item>
           <Item>
