--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -10,7 +10,7 @@
       target="_blank"
       rel="noopener noreferrer"
     >
-      Download BPMN bestand
+      Download BPMN-bestand
     </a>
   </:action>
 </PageHeader>
