--- a/app/templates/bpmn-files/favorites.hbs
+++ b/app/templates/bpmn-files/favorites.hbs
@@ -45,7 +45,7 @@
     <PageHeader>
       <:title>Processen</:title>
       <:subtitle><AuLink @route="help" @skin="secondary" @icon="circle-info">
-          Over BPMN bestanden
+          Over BPMN-bestanden
         </AuLink></:subtitle>
       <:action>
       </:action>
